.kubernetes/deployment-varnish.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: varnish
  name: varnish
  namespace: ${NAMESPACE}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: varnish
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers:
        - command:
            - /usr/local/bin/docker-entrypoint.sh
          image: ghcr.io/kevinmidboe/varnish-infra-map:latest
          imagePullPolicy: Always
          name: varnish
          resources:
            limits:
              cpu: 900m
              memory: 828Mi
            requests:
              cpu: 250m
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      imagePullSecrets:
        - name: ghcr-login-secret
      dnsPolicy: ClusterFirst
