.kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: infra-map
  name: infra-map
  namespace: ${NAMESPACE}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infra-map
  template:
    metadata:
      labels:
        app: infra-map
    spec:
      containers:
        - image: ${IMAGE}
          imagePullPolicy: IfNotPresent
          name: infra-map
          resources:
            limits:
              cpu: 900m
              memory: 828Mi
            requests:
              cpu: 250m
              memory: 64Mi
        - image: ${VARNISH_IMAGE}:latest
          imagePullPolicy: IfNotPresent
          name: varnish
          command: ['varnishd']
          args: ['-F', '-f', '/etc/varnish/default.vcl', '-a', ':6081', '-s', 'malloc,512m']
          volumeMounts:
            - name: varnish-vcl
              mountPath: /etc/varnish/default.vcl
              subPath: default.vcl
          resources:
            limits:
              cpu: 900m
              memory: 828Mi
            requests:
              cpu: 250m
              memory: 64Mi
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-login-secret
      volumes:
        - name: varnish-vcl
          configMap:
            name: varnish-vcl
