.kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: varnish
  name: varnish
  namespace: ${NAMESPACE}
spec:
  ports:
    - port: 80
      name: http-varnish
      protocol: TCP
      targetPort: 6081
  selector:
    app: varnish
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: infra-map
  name: infra-map
  namespace: ${NAMESPACE}
spec:
  ports:
    - port: 80
      name: http-app
      protocol: TCP
      targetPort: 3000
  selector:
    app: infra-map
  sessionAffinity: None
  type: ClusterIP
