.kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-map-ingress
  namespace: ${NAMESPACE}
spec:
  ingressClassName: traefik
  rules:
    - host: infra.kazan.schleppe.cloud
      http:
        paths:
          - backend:
              service:
                name: varnish
                port:
                  number: 80
            path: /
            pathType: Prefix
